--- a/back-end/front-end/package.json
+++ b/back-end/front-end/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.6",
+    "stable": "^0.1.8",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
