--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"node src",
     "dev": "nodemon src"
+
   },
   "keywords": [],
   "author": "",
