--- a/back-end/front-end/package.json
+++ b/back-end/front-end/package.json
@@ -5,15 +5,21 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "@reduxjs/toolkit": "^1.9.4",
+    "@rollup/plugin-terser": "^0.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.6",
+    "redux-thunk": "^2.4.2",
     "stable": "^0.1.8",
     "styled-components": "^5.3.9",
+    "svgo": "^3.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
