--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node src",
+    "start": "node src",
     "dev": "nodemon src"
-
   },
   "keywords": [],
   "author": "",
@@ -19,6 +18,7 @@
     "express-handlebars": "^7.0.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
+    "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.10.0"
