--- a/back-end/front-end/package.json
+++ b/back-end/front-end/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.6",
     "@jridgewell/sourcemap-codec": "^1.4.15",
     "@mui/icons-material": "^5.11.16",
+    "@mui/joy": "^5.0.0-alpha.76",
     "@mui/material": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.4",
     "@rollup/plugin-terser": "^0.4.1",
