--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,16 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.2",
-    "express-session": "^1.17.3",
-    "express-validator": "^6.15.0",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.10.0"
   },
   "devDependencies": {
