--- a/back-end/front-end/package.json
+++ b/back-end/front-end/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.4",
     "@rollup/plugin-terser": "^0.4.1",
+    "antd": "^5.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
