--- a/back-end/.env
+++ b/back-end/.env
@@ -4,3 +4,6 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=Sabah_db
 JWT_SECRET=Sabah_proyect
+
+EMAIL_USERNAME=dbenavidesg@unbosque.edu.co
+EMAIL_PASSWORD=Bogota&Montreal22
