--- a/back-end/front-end/package.json
+++ b/back-end/front-end/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@jridgewell/sourcemap-codec": "^1.4.15",
     "@mui/icons-material": "^5.11.16",
     "@mui/joy": "^5.0.0-alpha.76",
-    "@mui/material": "^5.12.0",
+    "@mui/lab": "^5.0.0-alpha.129",
+    "@mui/material": "^5.12.3",
     "@mui/x-data-grid": "^6.2.1",
     "@reduxjs/toolkit": "^1.9.4",
     "@rollup/plugin-terser": "^0.4.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
