--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,11 +19,13 @@
     "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.1",
     "nodemailer": "^6.9.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "webpack": "^5.84.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
