--- a/back-end/front-end/package.json
+++ b/back-end/front-end/package.json
@@ -12,6 +12,7 @@
     "@mui/x-data-grid": "^6.2.1",
     "@reduxjs/toolkit": "^1.9.4",
     "@rollup/plugin-terser": "^0.4.1",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
