--- a/back-end/front-end/package.json
+++ b/back-end/front-end/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/joy": "^5.0.0-alpha.76",
     "@mui/material": "^5.12.0",
+    "@mui/system": "^5.13.7",
     "@mui/x-data-grid": "^6.2.1",
     "@reduxjs/toolkit": "^1.9.4",
     "@rollup/plugin-terser": "^0.4.1",
