--- a/back-end/front-end/package.json
+++ b/back-end/front-end/package.json
@@ -11,8 +11,10 @@
     "@mui/material": "^5.12.0",
     "@mui/system": "^5.13.7",
     "@mui/x-data-grid": "^6.2.1",
+    "@mui/x-date-pickers": "^6.10.0",
     "@reduxjs/toolkit": "^1.9.4",
     "@rollup/plugin-terser": "^0.4.1",
+    "dayjs": "^1.11.9",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
