--- a/back-end/front-end/package.json
+++ b/back-end/front-end/package.json
@@ -33,7 +33,7 @@
     "stable": "^0.1.8",
     "styled-components": "^5.3.9",
     "svgo": "^3.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
