--- a/back-end/front-end/package.json
+++ b/back-end/front-end/package.json
@@ -25,6 +25,7 @@
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
