--- a/back-end/.env
+++ b/back-end/.env
@@ -18,3 +18,5 @@ GOOGLE_CLIENT_ID=100331286089801540659
 
 RP_ID_ENTREGAS=1XZAFkvhpgoNDHWHaKFQa6ir-u6_Ds49D
 RP_ID_RETROALIMENTACIONES=162clCuGzNdwdjHra17Le6vAcwGVJJNWr
+
+CORS=http://localhost:3000
