--- a/back-end/.env
+++ b/back-end/.env
@@ -1,8 +1,8 @@
 DB_USER=postgres
-DB_PASS=qwerty
-DB_HOST=localhost
+DB_PASS=sabah2023*
+DB_HOST=35.238.238.207
 DB_PORT=5432
-DB_DATABASE=Sabah_db
+DB_DATABASE=postgres
 JWT_SECRET=Sabah_proyect
 
 EMAIL_USERNAME=dbenavidesg@unbosque.edu.co
